# django-fiction-outlines

./: .bumpversion.cfg  .coveragerc  .gitignore  .pyup.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
docs/: api.rst  caveats.rst  conf.py  contributing.rst  fiction_outlines.migrations.rst  fiction_outlines.rst  forms.rst  index.rst  installation.rst  introduction.rst  license.rst  modules.rst  receivers.rst  signals.rst  tutorial.rst  views.rst
fiction_outlines/: __init__.py  admin.py  apps.py  forms.py  models.py  receivers.py  rules.py  signals.py  urls.py  views.py
fiction_outlines/migrations/: 0001_initial.py  0002_auto_20180407_2137.py  0003_auto_20180414_2035.py  0004_auto_20180419_1154.py
fiction_outlines/templates/fiction_outlines/: arc_create.html  arc_delete.html  arc_detail.html  arc_list.html  arc_update.html  arcnode_create.html  arcnode_delete.html  arcnode_detail.html  arcnode_move.html  arcnode_update.html  base.html  character_create.html  character_delete.html  character_detail.html  character_instance_create.html  character_instance_delete.html  character_instance_detail.html  character_instance_list.html  character_instance_update.html  character_list.html  character_update.html  (+27 more)
tests/: models.py  settings.py  test_export_utils.py  test_forms.py  test_models.py  test_views.py  urls.py
